# factorio_munge

./: allsymbols.py  allsymbols_eQuality.py  allsymbols_extract.py  bp.py  craftingorder.py  display.py  experiment.py  extract.py  formatnotes.md  formulatable.py  pyproject.toml  qualval.py  recipes.py  scraplist.py  stresstest.py
inputs/: allsignals.csv  allsymbols.bp  book.bp  constant.txt  example1.bp  example2.bp  example3.bp  example4.bp  example5.bp  example6.bp
